[package]
name = "pp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
v8 = "0.82.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
url = "2.4.0"
