[package]
name = "pp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
# v8 = "0.82.0"
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = "0.1.3"
url = "2.4.0"
js-sandbox = "0.2.0-rc.2"
