[package]
name = "pp"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.4"
hyper = { version = "1", features = ["full"] }
hyper-util = "0.1.1"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["make"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
js-sandbox = "0.2.0-rc.2"
reqwest = "0.11.18"
